[package]
name = "dtool"
version = "0.12.0"
authors = ["GB <guoxbin@gmail.com>"]
description = "A command-line tool collection to assist development"
categories = ["command-line-utilities"]
homepage = "https://github.com/guoxbin/dtool"
repository = "https://github.com/guoxbin/dtool"
license = "GPL-3.0"
readme = "README.md"
keywords = [ "tools", "conversion", "codec", "utilities", "develop" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
hex = "0.4.0"
chrono = "0.4.10"
bs58 = { version = "0.3.0", features = ["check"] }
base64 = "0.11.0"
urlencoding = "1.0.0"
parity-codec = "3.2"
md5 = "0.7.0"
lazy_static = "1.4.0"
ring = "0.16.20"
sha2 = "0.8.0"
sha3 = "0.8.2"
ripemd160 = "0.8.0"
escaper = "0.1.0"
regex = "1.3.1"
linked-hash-map = "0.5.6"
prettytable-rs = "^0.8"
madato = "0.5.3"
crc = "1.8.1"
heck = "0.3.1"
rust-crypto = "0.2.36"
blake3 = "*"
yogcrypt = "0.0.0"
secp256k1 = { version = "0.20", features = ["rand-std", "bitcoin_hashes"] }
untrusted = "0.7.1"
schnorrkel = "0.10.1"
twox-hash = "1.6.1"
byteorder = "1.3.1"
rand = "0.8.4"
p256 = "0.9.0"
p384 = "0.8.0"
